# api-doc/nise3-organization-api-service-openapi.json
@@ -15,6 +15,9 @@
             "url": "http://localhost:8000/api/v1"
         },
         {
+            "url": "http://localhost:8002/api/v1"
+        },
+        {
             "url": " https://api.bus.softbd.xyz/org/api/v1"
         },
         {
@@ -718,39 +721,6 @@
                     "organization"
                 ]
             }
-        },
-        "/register-organization": {
-             "post": {
-                 "summary": "Register an Organization",
-                 "description": "Register an Organization",
-                 "requestBody": {
-                     "content": {
-                         "application/x-www-form-urlencoded": {
-                             "schema": {
-                                 "$ref": "#/components/schemas/organizationRegister"
-                             }
-                         }
-                     }
-                 },
-                 "responses": {
-                     "200": {
-                         "description": "success",
-                         "content": {
-                             "application/json": {
-                                 "schema": {
-                                     "$ref": "#/components/schemas/organizationRegister"
-                                 },
-                                 "example": {
-
-                                 }
-                             }
-                         }
-                     }
-                 },
-                 "tags": [
-                     "organization"
-                 ]
-             }
         },
         "/rank-types": {
             "get": {
@@ -4429,8 +4399,7 @@
                 ]
             }
         },
-
-        "/register-organization": {
+        "/organization-registration": {
             "post": {
                 "summary": "Register Organization",
                 "parameters": [
@@ -4448,6 +4417,9 @@
                     },
                     {
                         "$ref": "#/components/parameters/mobile"
+                    },
+                    {
+                        "$ref": "#/components/parameters/contact_person_mobile"
                     },
                     {
                         "name": "name_of_the_office_head",
@@ -4519,7 +4491,6 @@
                                         "contact_person_mobile": "01758393749",
                                         "password": "12345678",
                                         "password_confirmation": "12345678"
-
                                     },
                                     "_response_status": {
                                         "success": true,
@@ -6119,6 +6090,15 @@
                     "example": "01711223344"
                 }
             },
+            "contact_person_mobile": {
+                "name": "contact_person_mobile",
+                "in": "query",
+                "required": true,
+                "schema": {
+                    "type": "string",
+                    "example": "01711223344"
+                }
+            },
             "domain": {
                 "name": "domain",
                 "in": "query",
@@ -6135,15 +6115,6 @@
                 "schema": {
                     "type": "string",
                     "example": "+123456"
-                }
-            },
-            "contact_person_mobile": {
-                "name": "contact_person_mobile",
-                "in": "query",
-                "required": true,
-                "schema": {
-                    "type": "string",
-                    "example": "01789277788"
                 }
             },
             "contact_person_name": {
