# routes/web.php
@@ -44,9 +44,7 @@ $router->group(['prefix' => 'api/v1', 'as' => 'api.v1'], function () use ($route
     $router->get('upazilas/{id}', ['as' => 'upazilas.read', 'uses' => 'LocUpazilaController@read']);
 
     /** organization registration */
-    $router->post("register-organization",["as"=>"register.organization","uses"=>"OrganizationController@organizationRegister"]);
-
-
+    $router->post("organization-registration", ["as" => "register.organization", "uses" => "OrganizationController@organizationRegistration"]);
 
 
     /** organizationType trash */
